--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"axios": "^0.21.1",
 		"discord.js": "^12.5.1",
 		"dotenv": "^8.2.0",
+		"express": "^4.17.1",
 		"fs": "0.0.1-security",
 		"images-scraper": "^6.0.0",
 		"moment": "^2.29.1",
